force-app/main/default/objects/ZB_Corporate_Contact__c/ZB_Corporate_Contact__c.object-meta.xml
<CustomObject>
    <description>This object stores all data on existing and potential ZB corporate contacts leveraged by the Medical Education team and others. Previously, this data was stored in the Professional Education opportunity record type.</description>
    <label>ZB Corporate Contact</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ZB Corporate Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZB Corporate Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>