force-app/main/default/objects/ZB_Corporate_Contact__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Healthcare Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ZB Corporate Contacts (Account Name)</relationshipLabel>
    <relationshipName>ZB_Corporate_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>