force-app/main/default/objects/ZB_Corporate_Contact__c/fields/Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Interest__c</fullName>
    <label>Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Research</fullName>
            </value>
            <value>
                <fullName>Project Consulting</fullName>
            </value>
            <value>
                <fullName>Advisory Boards</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Fellowship &amp; Residency</fullName>
            </value>
            <value>
                <fullName>T&amp;E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>