force-app/main/default/objects/ZB_Corporate_Contact__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>