force-app/main/default/objects/ZB_Corporate_Contact__c/fields/Contract_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Contract_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Delivered?</label>
    <type>Checkbox</type>
</CustomField>