force-app/main/default/objects/ZB_Corporate_Contact__c/fields/Last_T_E_Communication__c.field-meta.xml
<CustomField>
    <fullName>Last_T_E_Communication__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last T&amp;E Communication</label>
    <type>Date</type>
</CustomField>