force-app/main/default/objects/ZB_Corporate_Contact__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UE</fullName>
            </value>
            <value>
                <fullName>LE</fullName>
            </value>
            <value>
                <fullName>EI</fullName>
            </value>
            <value>
                <fullName>Rosa</fullName>
            </value>
            <value>
                <fullName>ZB Connect</fullName>
            </value>
            <value>
                <fullName>Outpatient</fullName>
            </value>
            <value>
                <fullName>Efficient Care</fullName>
            </value>
            <value>
                <fullName>MyMobility</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Knee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>