force-app/main/default/objects/ZB_Corporate_Contact__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Re-Opened</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Vetting</fullName>
            </value>
            <value>
                <fullName>Execute</fullName>
            </value>
            <value>
                <fullName>Close No</fullName>
            </value>
            <value>
                <fullName>Close Yes</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
                <isActive>false</isActive>
                <label>Close</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>