force-app/main/default/objects/ZB_Corporate_Contact__c/fields/Surgeon_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon Account Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Med_Ed_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>