force-app/main/default/objects/ZB_Corporate_Contact__c/fields/Vector__c.field-meta.xml
<CustomField>
    <fullName>Vector__c</fullName>
    <label>Vector</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Globalization</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Strategic Validation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>